/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "SchemaChangeMessage";

enum DataType {
    BOOLEAN = 1;
    BYTE = 2;
    SHORT = 3;
    INTEGER = 4;
    LONG = 5;
    FLOAT = 6;
    DOUBLE = 7;
    STRING = 8;
    NULLABLEBOOLEAN = 9;
    DATE = 10;
    DATETIME = 11;
}

message SchemaChangeDto {
    required uint32 schemaSize = 1;

    message AddColumn {
        optional uint32 columnId = 1;

        enum ColumnType {
            BOOLEAN = 1;
            BYTE = 2;
            SHORT = 3;
            INTEGER = 4;
            LONG = 5;
            FLOAT = 6;
            DOUBLE = 7;
            STRING = 8;
            NULLABLEBOOLEAN = 9;
        }
        required ColumnType type = 2;
        required string name = 3;

        optional DataType dataType = 4;
        oneof nullValue {
            double doubleNullValue = 5;
            float floatNullValue = 6;
            sint32 intNullValue = 7;
            sint64 longNullValue = 8;
            bool booleanNullValue = 9;
            string stringNullValue = 10;
            bytes blobNullValue = 11;
            sint32 nullNullValue = 12;
        }
    }
    repeated AddColumn addedColumns = 2;

    message RemoveColumn {
        required uint32 columnId = 1;
    }
    repeated RemoveColumn removedColumns = 3;
}
